[package]
name = "fv-template"
version = "0.2.2"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/fv-template"
description = "Field-value based string templating"
repository = "https://github.com/sval-rs/fv-template"
readme = "README.md"
exclude = [
    ".github/*",
]

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.syn]
version = "2"
features = ["full", "visit-mut"]

[dependencies.thiserror]
version = "1"
